# pxsearch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db_requirements.txt  dev_requirements.in  dev_requirements.txt  fetch_and_run.sh  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  run_ingest.sh  secretsHandler.js  serverless.yml  setup.py  zappa_settings.json
.github/: CODEOWNERS
.github/workflows/: continuous_integration.yml
alembic/: env.py
alembic/versions/: 131aab4d9e49_create_tables.py  407037cb1636_add_stac_1_0_0_fields.py  5909bd10f2e6_change_item_geometry_column_type.py  77c019af60bf_use_timestamptz_rather_than_timestamp.py  821aa04011e8_change_pri_key_for_item.py
db/: create_tables.sql  db_geometry.py  export_table.sql  update_DB.py
pxsearch/: __init__.py  app.py  combinations.py  const.py  db.py  db_fixtures.py  insert_ignore.py  ls8l2.py  lsl2.py  s1_const.py  s1_inventory.py  s2_inventory.py  s3_inventory.py  search.py  temp_ingest_data.py  utils.py
pxsearch/ingest/: const.py  lsl2.py  push.py  run.py  signals.py  stac_api.py  utils.py
pxsearch/models/: stac.py  tutorial_views.py  view.py  view_2.py
tests/: conftest.py  scenarios.py  test_combinations.py  test_ingest_item.py  test_ingest_run.py  test_ingest_signals.py  test_ingest_stac_api.py  test_ingest_utils.py  test_search.py  test_utils.py
tests/data/: test_signal_s2.json  test_signal_usgs.json
tutorials/: tutorial_views.py  tutorial_views_II.py  tutorial_views_III.py
