[tool.black]
line-length = 79
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.poetry]
name = "\u001b[A\u001b[B"
version = "0.1.0"
description = ""
authors = ["Daniel Wiesmann <daniel@tesselo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
alembic = "^1.6.5"
GeoAlchemy2 = "^0.12.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
alembic-migration-fixtures = "^0.1.0"
iso8601 = "^1.0.2"
Shapely = "^1.8.2"
click = "^8.1.3"
sentry-sdk = "^1.7.2"
kiwi-structlog-config = "^0.1.8"
boto3 = "^1.24.34"


[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
lxml = "^4.9.1"
black = "^22.6.0"
pre-commit = "^2.20.0"
semgrep = "^0.105.0"
pytest-cov = "^3.0.0"
bandit = "^1.7.4"
pydocstyle = "^6.1.1"
requests-mock = "^1.9.3"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
